fix main page header on mobile (#61)
* fix main page header on mobile

* Merge branch 'main' into blue-banner-fix

* fixed header on main page & menu for mobile

* Improve header styling

* Update main.css

--- a/_sass/partials/_navigation.scss
+++ b/_sass/partials/_navigation.scss
@@ -11,14 +11,9 @@ $nav-scroll-color-hover: rgba(0, 0, 0, 0.8);
   @media (min-width: 768px) and (max-width: 991px) {
     padding: 13px 0 0 34px;
   }
-  &.after-scroll {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.15);
-    .overlay {
-      opacity: 1;
-    }
-  }
+  padding-top: 20px;
+  padding-bottom: 20px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.15);
   .overlay {
     opacity: 1;
     transition: $base-transition;
@@ -29,14 +24,9 @@ $nav-scroll-color-hover: rgba(0, 0, 0, 0.8);
   transform: translateY(20px);
   transition: $base-transition;
   padding-left: 30px;
+  transform: translateY(1px);
   @media (max-width: 767px) {
     transform: translateX(-45px);
-  }
-  .top-header.after-scroll & {
-    transform: translateY(1px);
-    @media (max-width: 767px) {
-      transform: translateX(-45px);
-    }
   }
   .logo {
     float: left;
@@ -83,7 +73,7 @@ nav {
       margin: 20px 0 0 5px;
       transform: translateY(0);
     }
-    .top-header.after-scroll & {
+    .top-header & {
       transform: translateY(20px);
       @media (max-width: 767px) {
         transform: translateY(0);
@@ -120,7 +110,7 @@ nav {
           color: $main-color;
         }
       }
-      .top-header.after-scroll & {
+      .top-header & {
         color: $nav-scroll-color;
         @media (max-width: 767px) {
           top: 20px;
@@ -155,10 +145,7 @@ nav {
 .icon-menu {
   width: 20px;
   height: 20px;
-  fill: #e6e6e6;
-  .top-header.after-scroll & {
-    fill: #464646;
-  }
+  fill: #464646;
 }
 .menu-trigger {
   float: right;
